--- a/node-server/package.json
+++ b/node-server/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "ethers": "^6.13.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "ipfs-http-client": "^60.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
