--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^2.0.0",
     "antd": "^5.24.2",
     "axios": "^1.7.9",
     "ethers": "^6.13.5",
+    "ipfs-http-client": "^60.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "web3": "^4.16.0"
